Add buffered run metadata and support parent request
