# main.go
@@ -46,10 +46,11 @@ func setupRouter(ctx context.Context, appConfig *app.SchedulerConfig) *gin.Engin
 	// version 1
 	apiV1 := router.Group("algorithm/v1")
 
-	apiV1.POST("run/:algorithmName", v1.CreateRun(appServices.CheckpointBuffer(), appServices.Cache()))
+	apiV1.POST("run/:algorithmName", v1.CreateRun(appServices.CheckpointBuffer(), appServices.Cache(), appServices.JobInformer(), appConfig.ResourceNamespace, appServices.Logger(ctx)))
 	apiV1.GET("results/:algorithmName/requests/:requestId", v1.GetRunResult(appServices.CheckpointBuffer()))
 	apiV1.GET("results/tags/:requestTag", v1.GetRunResultsByTag(appServices.CheckpointBuffer(), appServices.Logger(ctx)))
 	apiV1.GET("metadata/:algorithmName/requests/:requestId", v1.GetRunMetadata(appServices.CheckpointBuffer()))
+	apiV1.GET("buffer/:algorithmName/requests/:requestId", v1.GetBufferedRunMetadata(appServices.CheckpointBuffer()))
 	apiV1.GET("payload/:algorithmName/requests/:requestId", v1.GetRunPayload(appServices.CheckpointBuffer()))
 
 	go func() {
